--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ir.heyzha.www.kamaposter">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +25,21 @@
         <activity android:name=".CityAndClassicCategoryActivity"/>
         <activity android:name=".FaceImagesAndSportCategoryActivity"/>
         <activity android:name=".BackgroundsCategoryActivity"/>
+
+        <receiver
+            android:enabled="true"
+            android:exported="true"
+            android:name=".StartupActivity"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+        </receiver>
+
     </application>
 
 </manifest>
