--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,9 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "ir.heyzha.www.kamaposter"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 27
-        versionCode 6
+        versionCode 8
         versionName "1.0"
     }
     buildTypes {
@@ -26,5 +26,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.veinhorn.scrollgalleryview:glide-loader:1.2.4'
     implementation 'com.veinhorn.scrollgalleryview:library:1.0.8'
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
