--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".FaceImagesAndSportCategoryActivity"/>
         <activity android:name=".BackgroundsCategoryActivity"/>
         <activity android:name=".VideoActivity"/>
+        <activity android:name=".ThumbnailsViewActivity" />
 
         <receiver
             android:enabled="true"
