--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,12 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+
+    implementation('com.squareup.retrofit2:retrofit:2.0.0-beta4') {
+        exclude module: 'okhttp'
+    }
+    implementation 'com.squareup.okhttp3:okhttp:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    implementation 'com.google.code.gson:gson:2.6.1'
 }
